# cryptowallet

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  asyncapi.yaml  asyncapi_test.yaml  celerybeat-schedule.db  docker-compose-local.yml  entrypoint.sh  file_schema.json  image_data.yaml  pyproject.toml  requirements.txt
celery_config/: config.py  tasks.py
crypto_parser_service/services/: abstract_parser_service.py  etherium_parser_service.py
crypto_scanner_service/: listeners.py  settings.py
crypto_scanner_service/services/: abstract_crypto_scanner.py  eth_crypro_scanner.py
db_config/: alembic.ini  database.py  models.py
db_config/alembic/: env.py  script.py.mako
db_config/management/: db_initialisation.py
delivery_config/: listeners.py  schemas.py
delivery_config/services/: delivery_abstract_service.py  delivery_eth_service.py
etherium_config/: listeners.py  settings.py
etherium_config/services/: eth_parser.py  eth_scanner.py
fastapi_config/: admin.py  environment.py  main.py
front/: chat.html  chat_reserve.html  ibay.html  ibay_min.html  login.html  my_wallet.html  registration.html  user_profile.html
front/sqladmin_custom_templates/: base.html  create.html  error.html  login.html
management/: initial_script.py
nginx/: nginx.conf
propan_config/: router.py
redis_config/: redis_config.py
redis_config/services/: redis_parser_service.py  redis_user_service.py
socketio_config/: listeners.py  server.py
src/etherium/: models.py
templates/: chat.html  ibay.html  login.html  my_wallet.html  user_profile.html
(+230 files in other folders)
