[tool.poetry]
name = "cryptowallet"
version = "0.1.0"
description = ""
authors = ["thelonggoodbuy <thelonggoodbuy1991@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.7"
mypy = "^1.8.0"
fastapi = "^0.109.0"
uvicorn = {extras = ["standart"], version = "^0.26.0"}
sqlalchemy = "^2.0.25"
sqlalchemy-file = "^0.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
